test/spec_vectors/br_on_cast_fail/fail/module_6.wat
(module (func (result anyref) (br_on_cast_fail 0 eqref anyref (unreachable))))